crates/usd-wasm/tests/snapshots/fixtures__fixtures@texture_fallback.usda.snap
---
source: crates/usd-wasm/tests/fixtures.rs
expression: "out.replace(&dir, \"\")"
input_file: fixtures/texture_fallback.usda
---
upAxis Y, metersPerUnit 0.01
prims 4, meshes 1, triangles 2

instances:
  /Quad: geometry 0, material 0
    at (0, 0, 0), world (-1, -1, 0)..(1, 1, 0)

geometries:
  0 /Quad: 2 triangles (all outward), 4 vertices, bounds (-1, -1, 0)..(1, 1, 0)
    normals (0, 0, 1) x4

materials:
  0 /Mat preview: color (0, 1, 0), opacity 1, roughness 1, metallic 0
